@@ -5,23 +5,29 @@ import ru.yandex.practicum.filmorate.exception.ValidationException;
 import ru.yandex.practicum.filmorate.model.Film;
 import ru.yandex.practicum.filmorate.storage.film.FilmStorage;
 import ru.yandex.practicum.filmorate.storage.film.InMemoryFilmStorage;
+import ru.yandex.practicum.filmorate.storage.user.InMemoryUserStorage;
+import ru.yandex.practicum.filmorate.storage.user.UserStorage;
 
 import java.time.LocalDate;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class FilmService {
 
     private final FilmStorage filmStorage;
+    private final UserStorage userStorage;
 
+    // для тестов
     public FilmService() {
         this.filmStorage = new InMemoryFilmStorage();
+        this.userStorage = new InMemoryUserStorage();
     }
 
-    public FilmService(FilmStorage filmStorage) {
+    // для Spring
+    public FilmService(FilmStorage filmStorage, UserStorage userStorage) {
         this.filmStorage = filmStorage;
+        this.userStorage = userStorage;
     }
 
     public Film createFilm(Film film) {
@@ -42,37 +48,44 @@ public class FilmService {
         return filmStorage.getById(id);
     }
 
-    private void validate(Film film) {
-        if (film.getName() == null || film.getName().isBlank()) {
-            throw new ValidationException("Название не может быть пустым");
-        }
-
-        if (film.getDescription() != null && film.getDescription().length() > 200) {
-            throw new ValidationException("Описание слишком длинное");
-        }
-
-        LocalDate minDate = LocalDate.of(1895, 12, 28);
-        if (film.getReleaseDate() != null && film.getReleaseDate().isBefore(minDate)) {
-            throw new ValidationException("Слишком ранняя дата релиза");
-        }
-
-        if (film.getDuration() == null || film.getDuration() <= 0) {
-            throw new ValidationException("Длительность должна быть положительной");
-        }
-    }
-
     public void addLike(Integer filmId, Integer userId) {
-        getById(filmId).getLikes().add(userId);
+        Film film = filmStorage.getById(filmId);
+        userStorage.getById(userId);
+
+        film.getLikes().add(userId);
     }
 
     public void removeLike(Integer filmId, Integer userId) {
-        getById(filmId).getLikes().remove(userId);
+        Film film = filmStorage.getById(filmId);
+        userStorage.getById(userId);
+
+        film.getLikes().remove(userId);
     }
 
     public List<Film> getPopular(int count) {
         return filmStorage.getAll().stream()
                 .sorted(Comparator.comparingInt((Film f) -> f.getLikes().size()).reversed())
                 .limit(count)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    private void validate(Film film) {
+
+        if (film.getName() == null || film.getName().isBlank()) {
+            throw new ValidationException("Название фильма не может быть пустым");
+        }
+
+        if (film.getDescription() != null && film.getDescription().length() > 200) {
+            throw new ValidationException("Описание не может быть длиннее 200 символов");
+        }
+
+        if (film.getReleaseDate() != null &&
+                film.getReleaseDate().isBefore(LocalDate.of(1895, 12, 28))) {
+            throw new ValidationException("Некорректная дата релиза");
+        }
+
+        if (film.getDuration() == null || film.getDuration() <= 0) {
+            throw new ValidationException("Длительность должна быть положительной");
+        }
     }
 }
